--- a/src/README
+++ b/src/README
@@ -69,3 +69,24 @@
  # make
  # sudo make install
 
+
+		Project Dependents:
+		===================
+
+ Server:
+ biwoo -> mycp & bodb
+ 	mycp -> boost & libRTP
+ 		libRTP -> jrtplib & jthread & boost
+ 	bodb -> boost
+ StreamModule -> mycp & libSIP & libG729a
+  libSIP -> libosip2 & libeXosip2
+ 
+ Client:
+ biwooclient -> biwoolib & libStreamX & wxWidgets
+  biwoolib -> mycp & bodb & libCoder
+   libCoder -> ffmpeg & x264 & xvidcore
+ 	libStreamX -> libDS & libStreamClient
+ 	 libDS -> DirectShow
+ 	 libStreamClient -> mycp
+ 
+ 
