--- a/trunk/src/ChangeLog
+++ b/trunk/src/ChangeLog
@@ -3,8 +3,11 @@
 					==========
 					
 
- VERSION: 1.0.2+ 
- 1 Add display cogroup & company info, and online user count.
+	VERSION: 1.0.2+
+	===============
+	
+1 Add display cogroup & company info, and online user count.
+2 reset thirdparty libraty include path environment variables
  
  
  VERSION: 1.0.2 2010-05-4
