--- a/wiki/Install.wiki
+++ b/wiki/Install.wiki
@@ -64,5 +64,4 @@ win32_run.bat
 == 3.2 Run BiwooClient ==
  * *Windows:* Run $(BIWOO_PATH)\bin\win32\BiwooClient\biwooclient.exe
 
-
-Support please contact: akee.yang@gmail.com
+*Return Index:* [Index]
