Edited wiki page through web user interface.

--- a/wiki/Install.wiki
+++ b/wiki/Install.wiki
@@ -64,4 +64,4 @@ win32_run.bat
 == 3.2 Run BiwooClient ==
  * *Windows:* Run $(BIWOO_PATH)\bin\win32\BiwooClient\biwooclient.exe
 
-*Return Index:* [Index]
+*Return Index:* [Index abc]
