--- a/wiki/Install.wiki
+++ b/wiki/Install.wiki
@@ -1,5 +1,6 @@
 #summary BiwooServer and BiwooClient installation.
 #labels BiwooServer,BiwooClient,Installation
+*[Index Index]*
 
 = 1 Database Installation =
 *See [Database]*
@@ -64,4 +65,4 @@ win32_run.bat
 == 3.2 Run BiwooClient ==
  * *Windows:* Run $(BIWOO_PATH)\bin\win32\BiwooClient\biwooclient.exe
 
-[Index Index]
+*[Index Index]*
