Edited wiki page through web user interface.

--- a/wiki/Install.wiki
+++ b/wiki/Install.wiki
@@ -6,27 +6,29 @@
 
 == 1.1 Setting ==
 *Setting file:*
- * *Windows:* $(BIWOO_PATH)\bin\wn32\BiwooServer\conf\modules.xml
- * *Linux:* $(BIWOO_PATH)\bin\linux\BiwooServer\conf\modules.xml
-
-*`<name>CommTcpServer</name>`:*
- * Reserve
-
-*`<name>CommUdpServer</name>`:*
- * *`<commport>`:* Main communication port; *UDP Default: 8012*
- * *`<capacity>`:* Component communication ability. *INTEGER Default: 3*
-
-*`<name>FileServer</name>`:*
- * *`<commport>`:* File service transfer port; *UDP Default: 8014*
- * *`<capacity>`:* Component communication ability. *INTEGER Default: 3*
-
-*`<name>CommRtpServer</name>`:*
- * *`<commport>`:* P2P audio and video transfer port; *UDP Default: 8020*
- * *`<capacity>`:* Component communication ability. *INTEGER Default: 3*
-
-*`<name>P2PUDPServer</name>`:*
- * *`<commport>`:* P2P file transfer port; *UDP Default: 8022*
- * *`<capacity>`:* Component communication ability. *INTEGER Default: 3*
+ # *$(BIWOO_PATH)\bin\`[liunx,win32]`\BiwooServer\conf\modules.xml*
+  # *`<name>CommTcpServer</name>`:*
+   * Reserve
+  # *`<name>CommUdpServer</name>`:*
+    * *`<commport>`:* Main communication port; UDP Default: *8012*
+    * *`<capacity>`:* Component communication ability. INTEGER Default: 3
+  # *`<name>FileServer</name>`:*
+   * *`<commport>`:* File service transfer port; UDP Default: *8014*
+   * *`<capacity>`:* Component communication ability. INTEGER Default: 3
+  # *`<name>CommRtpServer</name>`:*
+   * *`<commport>`:* P2P audio and video transfer port; UDP Default: *8020*
+   * *`<capacity>`:* Component communication ability. INTEGER Default: 3
+  # *`<name>P2PUDPServer</name>`:*
+   * *`<commport>`:* P2P file transfer port; UDP Default: *8022*
+   * *`<capacity>`:* Component communication ability. INTEGER Default: 3
+ # *$(BIWOO_PATH)\bin\`[liunx,win32]`\BiwooServer\conf\biwoo\params.xml*
+  # *`<name>FILESERVER</name>`:*
+   * *`<value>`:* FileServer address; PORT or IP:PORT format. Default: *8014*
+ # *$(BIWOO_PATH)\bin\`[liunx,win32]`\BiwooServer\conf\StreamModule\params.xml*
+  # *`<name>P2PRTPSERVER</name>`:*
+   * *`<value>`:* P2P RTP server address; PORT or IP:PORT format. Default: *8020*
+  # *`<name>P2PUDPSERVER</name>`:*
+   * *`<value>`:* P2P UDP server address; PORT or IP:PORT format. Default: *8022*
 
 == 1.2 Start BiwooServer ==
 *Windows:*
@@ -49,10 +51,10 @@ win32_run.bat
  * *Windows:* $(BIWOO_PATH)\win32\BiwooClient\default\setting.xml
 
 *Network setting:*
- * *`<address>`:* Main communication port; *UDP Default: ip:8012*
- * *`<fileserver>`:* File service transfer port; *UDP Default: ip:8014*
- * *`<p2p_rtp>`:* P2P audio and video transfer port; *UDP Default: ip:8020*
- * *`<p2p_udp>`:* P2P file transfer port; *UDP Default: ip:8022*
+ * *`<address>`:* Main communication port; UDP Default: *ip:8012*
+ * ~~*`<fileserver>`:* File service transfer port; UDP Default: ip:8014~~
+ * ~~*`<p2p_rtp>`:* P2P audio and video transfer port; UDP Default: ip:8020~~
+ * ~~*`<p2p_udp>`:* P2P file transfer port; UDP Default: ip:8022~~
 
 *Locale and language setting:*
  * *`<locale>`:* 
