--- a/trunk/src/ChangeLog
+++ b/trunk/src/ChangeLog
@@ -2,13 +2,18 @@
 					ChangeLog:
 					==========
 					
-= VERSION: 1.0.3+ =
+ # *(DB)* : Database table or field modified.
+
+= VERSION: 1.0.4 =
+*2010-05-28*
+ * A: *(DB)* add extension, mobile and description field in biwoo database userinfo_t table.
  * A: add change password function.
  * A: add update my information function.
  * A: add LoadSetting()
  * U: fix save password function.
+ * U: other
 
-	VERSION: 1.0.3
+	VERSION: 1.0.3 2010-05-19
 	===============
 	
 ADD: add display cogroup & company info, and online user count
