Edited wiki page through web user interface.

--- a/wiki/Index.wiki
+++ b/wiki/Index.wiki
@@ -1,7 +1,9 @@
 #summary All documents index.
 #labels Index
 
- # *Biwoo database setting:* See [Database]
- # *Biwoo installation:* See [Install]
+|| *Last Version:* || 1.0.4 ||
+|| *[Database]* || Biwoo database setting. ||
+|| *[Install]* || Biwoo installation. ||
 
-Support please contact: akee.yang@gmail.com
+----
+Support Please Contact: akee.yang@gmail.com
