Edited wiki page through web user interface.

--- a/wiki/Index.wiki
+++ b/wiki/Index.wiki
@@ -6,6 +6,7 @@
 || [How] || *How Biwoo begin?* ||
 || [Database] || Biwoo database setting. ||
 || [Install] || Biwoo installation. ||
+|| [ThirdParty] || Third-Party library. ||
 
 ----
 Support Please Contact: akee.yang@gmail.com
