Edited wiki page through web user interface.

--- a/wiki/Compile.wiki
+++ b/wiki/Compile.wiki
@@ -1,6 +1,9 @@
 #summary Linux and windows compile.
 #labels compile
 
+[Index]
+----
+
 = Linux Compile =
 *!!! Only support BiwooServer linux compile !!!*
 
