--- a/wiki/Index.wiki
+++ b/wiki/Index.wiki
@@ -6,7 +6,7 @@
 || [How] || *How Biwoo begin?* ||
 || [Database] || Biwoo database setting. ||
 || [Install] || Biwoo installation. ||
-|| [Compile] || Biwoo compile. ||
+|| [Compile] || Biwoo linux and windows compile. ||
 || [ThirdParty] || Third-Party library. ||
 
 ----
