--- a/trunk/src/ChangeLog
+++ b/trunk/src/ChangeLog
@@ -5,8 +5,8 @@
  # *(DB)* : Database table or field modified.
 
 = VERSION: 1.0.4+ =
-*2010-06-03=*
- * U: Update to mycp 1.0.3+. Use cgcRtp::pointer gRtpService.
+*2010-06-04=*
+ * U: Update to mycp 1.0.4. Use cgcRtp and cgcSip service.
 
 = VERSION: 1.0.4 =
 *2010-05-28*
