--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,46 +1,2 @@
-		
-					ChangeLog:
-					==========
-					
- # *(DB)* : Database table or field modified.
 
-= VERSION: 1.0.4+ =
-*2010-06-07=*
- * U: Update to mycp 1.0.4. Use cgcRtp, cgcSip and cgcBodb service.
-
-= VERSION: 1.0.4 =
-*2010-05-28*
- * A: *(DB)* add extension, mobile and description field in biwoo database userinfo_t table.
- * A: add change password function.
- * A: add update my information function.
- * A: add LoadSetting()
- * U: fix save password function.
- * U: other
-
-	VERSION: 1.0.3 2010-05-19
-	===============
-	
-ADD: add display cogroup & company info, and online user count
-ADD: add auto-run function in win32 OS
-ADD: add display unread messages icon and tip
-ADD: add reversal remote video function
-ADD: add linux/BiwooServer
-UPD: reset thirdparty libraty include path environment variables
-UPD: update to support mycp 1.0.3 version.
-UDP: other
- 
- 
- VERSION: 1.0.2 2010-05-4
- 1 Add all contacts list and searching contacts function.
- 2 Add group chat function.
-
-
- VERSION: 1.0.1 2010-04-20
- 1. Fix when send file can not display the message time error.
- 2. StreamModule and biwoo modules have support linux compile.
-
-
- VERSION: 1.0.0 2010-04-08
- 1. Multilevel complex departments setting.
- 2. Text, image and P2P audio & video chat, and send file support.
- 3. Support offline message.
+ChangeLog : http://code.google.com/p/biwoo/wiki/ChangeLog
